FIX - Permisos en l10n_ve_topology

--- a/gestion_canaimas/view/solicitud_soporte.xml
+++ b/gestion_canaimas/view/solicitud_soporte.xml
@@ -93,6 +93,7 @@
                                     <separator string="Datos personales del estudiante:" colspan="2"/>
                                     <field name="nombre" placeholder="Nombre del Alumno"/>
                                     <field name="apellido" placeholder="Apellido del Alumno"/>
+                                    <field name="t_educ" placeholder="Tipo"/>
                                     <field name="grado" placeholder="Grado que estudia actualmente"/>
                                 </group>
                                 <group>
