--- a/gestion_canaimas/view/solicitud_soporte.xml
+++ b/gestion_canaimas/view/solicitud_soporte.xml
@@ -94,15 +94,16 @@
                                     <field name="nombre" placeholder="Nombre del Alumno"/>
                                     <field name="apellido" placeholder="Apellido del Alumno"/>
                                     <field name="t_educ" placeholder="Tipo"/>
-                                    <field name="grado" placeholder="Grado que estudia actualmente"/>
+                                    <field name="grado" domain= "[('tipo','=',t_educ)]" placeholder="Grado que estudia actualmente"/>
                                 </group>
                                 <group>
                                     <separator string="Dirección del centro educativo:" colspan="2"/>
                                     <field name="escuela" placeholder="Escuela del Alumno"/>
-                                    <field name="estado" placeholder="Estado" />
-                                    <field name="municipio" placeholder="Municipio del Alumno" />
-                                    <field name="parroquia" placeholder="Parroquia del Alumno"/>
-                                    <field name="direccion_r" colspan="2"  placeholder="Dirección de la escuela"/>
+                                    <field name="pais" invisible="1"/>
+                                    <field name="estado" domain= "[('country_id','=',pais)]" placeholder="Estado" />
+                                    <field name="municipio" domain= "[('state_id','=',estado)]" placeholder="Municipio del Alumno" />
+                                    <field name="parroquia" domain= "[('municipalities_id','=',municipio)]" placeholder="Parroquia del Alumno"/>
+                                    <field name="direccion_i" colspan="2"  placeholder="Dirección de la escuela"/>
                                 </group>
                             </group>
                         </page>
@@ -118,10 +119,11 @@
                                 </group>
                                 <group>
                                     <separator string="Dirección donde habita:" colspan="2"/>
-                                    <field name="estado_r"/>
-                                    <field name="municipio_r"/>
-                                    <field name="parroquia_r"/>
-                                    <field name="direccion_r" nolabel="1" colspan="2"  placeholder="Dirección del Representante"/>
+                                    <field name="pais_r" invisible="1"/>
+                                    <field name="estado_r" domain= "[('country_id','=',pais_r)]"/>
+                                    <field name="municipio_r" domain= "[('state_id','=',estado_r)]"/>
+                                    <field name="parroquia_r" domain= "[('municipalities_id','=',municipio_r)]"/>
+                                    <field name="direccion_r" colspan="2"  placeholder="Dirección del Representante"/>
                                 </group>
                             </group>
                         </page>
