--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -243,7 +243,9 @@ TAREAS
             <field name="res_model">gdc.tareas</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form,calendar,gantt</field>
+<!--
             <field name="domain">['|', ('responsible_id','=',uid), ('supervisor_id','=',uid)]</field>
+-->
             <field name="help" type="html">
             </field>
         </record>
@@ -273,6 +275,8 @@ TAREAS
                     <group>
                         <group>
                             <field name="project_id2" on_change="onchange_proyecto(project_id2)"/>
+                            <field name="responsible_id" invisible="1"/>
+                            <field name="supervisor_id" invisible="1"/>
                             <field name="name_tarea" />
                             <field name="date_start_tarea" on_change="onchange_date_start_tarea(date_start_tarea)"/>
                             <field name="date_end_tarea" on_change="onchange_date_end_tarea(date_end_tarea)"/>
