--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -378,13 +378,14 @@ INCIDENCIAS
                 <form string="Incidencias" version="7.0">
                     <group>
                         <group>
+                            <field name="project_id" invisible="1"/>
                             <field name="date_reporter" />
-                            <field name="tarea_id" />
+                            <field name="tarea_id" on_change="onchange_tarea(tarea_id)"/>
                             <field name="name_incidencia" />
-                                    </group>
-                            <separator string="Especifique las caracteristicas de la incidencia" colspan="2"/>
-                            <field name="description"/>
                         </group>
+                        <separator string="Especifique las caracteristicas de la incidencia" colspan="2"/>
+                        <field name="description" nolabel="1"/>
+                    </group>
                 </form>
             </field>
         </record>
